# text-server

./: text-server.cabal
demo-src/: Main.hs
src/Network/: TextServer.hs
static/: index.html  main.js
