name:                text-server
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Scott Kovach
maintainer:          dskovach@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.TextServer
  build-depends:       base >=4.8 && <4.9,
                       containers, aeson, text, utf8-string,
                       wai, wai-app-static, wai-websockets, websockets, warp, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

executable demo
  main-is:            Main.hs
  build-depends:      text-server, base >=4.8 && <4.9, text
  hs-source-dirs:     demo-src
